cleanup the examples